Enrich sections 11-12: 5 real-world tuning scenarios, detailed tool outputs, 5 leak patterns, 6 OOM types with step-by-step diagnosis, MAT analysis guide, quick decision table